<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_gravity="center_vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/registerUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/usernameEditText" />

    <EditText
        android:id="@+id/registerPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/passwordEditText"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/registerConfirmPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/registerConfirmPasswordEditText"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/registerSubmitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/registerButton" />

</LinearLayout>